--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
     "license": "proprietary",
     "require": {
         "php": "^7.0.8",
+        "doctrine/doctrine-fixtures-bundle": "^2.4",
+        "fzaninotto/faker": "^1.7",
         "sensio/framework-extra-bundle": "^5.0",
         "symfony/console": "^3.3",
         "symfony/form": "^3.3",
