--- a/config/services.yaml
+++ b/config/services.yaml
@@ -36,5 +36,12 @@ services:
         autowire: true
     app.player.event:
         public: true
-        class: \App\Event\PlayerEvent
+        class: App\Event\PlayerEvent
+    event_dispatcher:
+        public: true
+        class: Symfony\Component\EventDispatcher\EventDispatcher
+    app.player.add:
+        public: true
+        class: App\Controller\PlayerController::
+
 
