--- a/config/services.yaml
+++ b/config/services.yaml
@@ -7,9 +7,9 @@ services:
     # default configuration for services in *this* file
     _defaults:
         # automatically injects dependencies in your services
-        autowire: false
+        autowire: true
         # automatically registers your services as commands, event subscribers, etc.
-        autoconfigure: false
+        autoconfigure: true
         # this means you cannot fetch services directly from the container via $container->get()
         # if you need to do this, you can override this setting on individual services
         public: false
@@ -29,9 +29,8 @@ services:
         tags: ['controller.service_arguments']
     App\Entity\Player:
         public: true
-    App\AppEvent:
-        public: true
     App\Subscriber\PlayerSubscriber:
+        public: true
         arguments: ['@doctrine.orm.entity_manager']
         autowire: true
     app.player.event:
